--- a/dev/Makefile
+++ b/dev/Makefile
@@ -9,3 +9,6 @@ down:
 
 bash:
 	sudo docker exec -it web_scraper_denca_2-app bash
+
+start_app:
+	docker exec -it web_scraper_denca_2-app bash -c 'python3 src/main.py'
